# ar_converter

./: .dockerignore  .env.example  CREDITENTIALS.md  Dockerfile  Dockerfile_gltf  Dockerfile_usd  README.md  docker-compose.yml  launch.sh  pyproject.toml  requirements.txt
converter/: Dockerfile  build_usd.py
src/: __init__.py
src/core/: exceptions.py  settings.py
src/data/: repositories.py
src/dependencies/: dependencies.py
src/domain/: entities.py  repositories.py  usecases.py
src/presentation/: app.py  requests.py  routers.py
